# scaffold

./: .dockerignore  .fallowrc.jsonc  .gitignore  .rgignore  .tokeignore  Cargo.toml  Dockerfile  README.md  biome.json  compose.yaml  default.nix  flake.nix  package.json  shell.nix
.github/: dependabot.yml
crates/scaffold-analyzer/: Cargo.toml
crates/scaffold-analyzer/src/: lib.rs  tests.rs
crates/scaffold-archive/: Cargo.toml
crates/scaffold-archive/src/: lib.rs
crates/scaffold-catalog/: Cargo.toml
crates/scaffold-catalog/src/: action.rs  archive.rs  lib.rs  package.rs  tests.rs  tool.rs
crates/scaffold-catalog/src/fixtures/catalog/: archive-action.scm  dmg-action.scm  metadata-and-passthru.scm  source-aware-catalog-form.scm  source-aware-catalog.scm
crates/scaffold-catalog/src/schema/: description.rs  mod.rs  relationships.rs
crates/scaffold-docs/: Cargo.toml
crates/scaffold-docs/src/: lib.rs
crates/scaffold-docs/src/fixtures/: doc-entry.scm  doc-next.scm  extern-doc.scm  keyword-doc-location.scm  keyword-doc.scm
crates/scaffold-docs/src/index/: keywords.rs  mod.rs  model.rs  render.rs  search.rs  tests.rs
crates/scaffold-docs/src/index/source/: libraries.rs  mod.rs
crates/scaffold-dsl/: Cargo.toml  build.rs
crates/scaffold-dsl/src/: bundled.rs  catalog_context.rs  eval.rs  fs.rs  host.rs  json.rs  lib.rs  libraries.rs  literal.rs  path.rs  stdlib.rs  workspace.rs
crates/scaffold-dsl/src/extensions/app/: flatpak.scm  winget.scm
crates/scaffold-dsl/src/extensions/distro/: apt.scm  dnf.scm  pacman.scm  rpm.scm
crates/scaffold-dsl/src/extensions/distro/nix/: base.scm  mod.scm  profile.scm
crates/scaffold-dsl/src/extensions/distro/nix/tests/base/: test.scm
crates/scaffold-dsl/src/extensions/distro/nix/tests/profile/: test.scm
crates/scaffold-dsl/src/extensions/ecosystem/: bun.scm  cargo.scm  go.scm  npm.scm  uv.scm
crates/scaffold-dsl/src/extensions/platform/macos/: base.scm  mod.scm
crates/scaffold-dsl/src/extensions/platform/windows/: base.scm  mod.scm  registry.scm  shell.scm
crates/scaffold-dsl/src/extensions/source/: github.scm
crates/scaffold-dsl/src/extensions/support/: checks.scm  download.scm
crates/scaffold-dsl/src/fixtures/catalog/: focused-imports-catalog.scm  focused-imports.scm  ignores-doc-forms.scm  macro-tools.scm  metadata-helpers.scm  raw-required-tool.scm  rename-prefix-records.scm  scoped-imports.scm  tool-override-helpers.scm
crates/scaffold-dsl/src/fixtures/eval/: basic-values.scm  config-import.scm  disallowed-import.scm  fs-builtins.scm  generated-host.scm  local-syntax-rules.scm  multiple-values.scm  object-transformations.scm  path-builtins.scm  top-level-helpers.scm  top-level-syntax-rules.scm  workspace-builtins.scm
crates/scaffold-dsl/src/fixtures/extensions/: build-and-winget.scm  composed-catalog.scm  composition.scm  distrobox-transform.scm  github-release-cleanup-targz.scm  github-release-cleanup-zip.scm  import-dependencies.scm  package-lifecycle.scm  platform-macos.scm  platform-windows.scm  presence-checks.scm
crates/scaffold-dsl/src/fixtures/local/catalog-stem/: scaffold.scm
crates/scaffold-dsl/src/fixtures/local/catalog-stem/scaffold/acme/: tools.scm
crates/scaffold-dsl/src/fixtures/local/dependencies/: catalog.scm  test.scm
crates/scaffold-dsl/src/fixtures/local/dependencies/.scaffold/extensions/acme/: a-tools.scm  z-base.scm
crates/scaffold-dsl/src/fixtures/local/symlinked-extension/: scaffold.scm
crates/scaffold-dsl/src/fixtures/local/symlinked-extension/entries/: demo.scm
crates/scaffold-dsl/src/std/: catalog.scm  config.scm  fs.scm  host.scm  path.scm  test.scm  workspace.scm
crates/scaffold-dsl/src/std/catalog/: action.scm  archive.scm  base.scm  check.scm  context.scm  dependency.scm  helper.scm  metadata.scm  platform.scm  root.scm  tool.scm  transform.scm  uninstall.scm
crates/scaffold-dsl/src/std/config/: documentation.scm  object.scm  vector.scm
crates/scaffold-dsl/src/std/core/: doc.scm  object.scm  vector.scm
crates/scaffold-dsl/src/tests/: helpers.rs  mod.rs
crates/scaffold-install/: Cargo.toml
crates/scaffold-install/src/: lib.rs
crates/scaffold-install/src/fixtures/install/: all-with-package-platform-unsupported.scm  all-with-unsupported.scm  uninstall-rejects-unsafe-paths.scm  uninstall-removes-declared-paths.scm  unsupported-only.scm
crates/scaffold-install/src/install/: bindings.rs  error.rs  execute.rs  mod.rs  order.rs  presence.rs  report.rs  uninstall.rs
crates/scaffold-lsp/: Cargo.toml
crates/scaffold-lsp/src/: actions.rs  diagnostics.rs  document.rs  lib.rs  workspace.rs
crates/scaffold-lsp/src/features/: assistance.rs  inlay.rs  mod.rs  semantic.rs  symbols.rs  tests.rs
crates/scaffold-lsp/src/fixtures/: document-symbols.scm  inlay-hints.scm  invalid-syntax.fixture  keyword-inlay.scm  override-doc.scm  references.scm  semantic-keyword-stdlib-user.scm  semantic-tokens.scm  semantic-user-symbols.scm  symbol-filtering.scm  two-param-doc.scm  undocumented-definition.fixture  valid-syntax.scm
crates/scaffold-mcp/: Cargo.toml
crates/scaffold-mcp/src/: lib.rs  prompts.rs  resources.rs  server.rs
crates/scaffold-mcp/src/tools/: catalog.rs  evaluation.rs  mod.rs  quality.rs  reference.rs
crates/scaffold-platform/: Cargo.toml
crates/scaffold-platform/src/: lib.rs
crates/scaffold-wasm/: Cargo.toml  README.md
crates/scaffold-wasm/scripts/: refresh-reference.mjs  refresh-reference.sh
crates/scaffold-wasm/src/: diagnostics.rs  inlay.rs  lib.rs  navigation.rs  reference.json  reference.min.json  reference.rs  semantic.rs  tests.rs
crates/scaffold-wasm/src/fixtures/: inlay-hints-ignore-strings-comments.scm  local-definition.scm  nested-definitions.scm  reference-signature-doc.scm  reference-workspace-acme.scm  reference-workspace-other.scm  reference-workspace-undocumented.scm  semantic-tokens.scm  workspace-signature-acme.scm
examples/: README.md  catalog.scm  test.scm
nix/: package.nix  shell.nix
shared/: reference-ids.d.ts  reference-ids.js  reference.d.ts
site/: index.html  package.json  tsconfig.json  (+1 more)
src/: cli.rs  (+1 more)
(+192 files in other folders)
