[package]
name = "scaffold"
version = "0.0.1"
edition = "2024"

[workspace]
members = [".", "crates/*"]
resolver = "2"

[lints]
workspace = true

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
non_ascii_idents = "deny"
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused = { level = "deny", priority = -1 }
unused_crate_dependencies = "allow"
unused_qualifications = "allow"
unused_results = "allow"
variant_size_differences = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }

allow_attributes_without_reason = "allow"
as_conversions = "allow"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
empty_drop = "deny"
empty_enums = "deny"
enum_glob_use = "deny"
expect_used = "allow"
fallible_impl_from = "deny"
float_cmp = "allow"
format_collect = "deny"
future_not_send = "allow"
indexing_slicing = "allow"
integer_division = "allow"
large_include_file = "deny"
large_stack_arrays = "deny"
large_stack_frames = "allow"
linkedlist = "deny"
manual_assert = "deny"
manual_ok_or = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_assert_message = "allow"
missing_const_for_fn = "allow"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_collect = "deny"
panic = "allow"
panic_in_result_fn = "allow"
path_buf_push_overwrite = "deny"
pub_underscore_fields = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
string_lit_as_bytes = "deny"
todo = "deny"
transmute_ptr_to_ptr = "deny"
transmute_undefined_repr = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
used_underscore_binding = "deny"
wildcard_imports = "deny"
zero_sized_map_values = "deny"

[profile.dev]
debug = "line-tables-only"
incremental = false

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = false

[profile.test.package."*"]
debug = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
clap_complete = "4.6.5"
comfy-table = "7.2.2"
miette = { version = "7.6.0", default-features = false, features = ["fancy-no-backtrace", "derive"] }
nucleo-matcher = "0.3.1"
reedline = "0.48.0"
scaffold-analyzer = { path = "crates/scaffold-analyzer" }
scaffold-catalog = { path = "crates/scaffold-catalog" }
scaffold-context = { path = "crates/scaffold-context" }
scaffold-diagnostic = { path = "crates/scaffold-diagnostic" }
scaffold-docs = { path = "crates/scaffold-docs" }
scaffold-dsl = { path = "crates/scaffold-dsl" }
scaffold-fmt = { path = "crates/scaffold-fmt" }
scaffold-install = { path = "crates/scaffold-install" }
scaffold-lsp = { path = "crates/scaffold-lsp" }
scaffold-mcp = { path = "crates/scaffold-mcp" }
scaffold-platform = { path = "crates/scaffold-platform" }
scaffold-scheme = { path = "crates/scaffold-scheme" }
serde_json = "1.0.150"
termimad = "0.34.1"
thiserror = "2.0.18"
tower-lsp = "0.20.0"
