[package]
name = "scaffold-install"
version = "0.0.1"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
scaffold-archive = { path = "../scaffold-archive" }
scaffold-catalog = { path = "../scaffold-catalog" }
scaffold-context = { path = "../scaffold-context" }
scaffold-platform = { path = "../scaffold-platform" }
scaffold-process = { path = "../scaffold-process" }
scaffold-template = { path = "../scaffold-template" }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.150"
