[package]
name = "scaffold-install"
version = "0.0.1"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
petgraph = { version = "0.8.3", default-features = false, features = ["std", "graphmap"] }
scaffold-archive = { path = "../scaffold-archive" }
scaffold-catalog = { path = "../scaffold-catalog" }
scaffold-context = { path = "../scaffold-context" }
scaffold-platform = { path = "../scaffold-platform" }
scaffold-process = { path = "../scaffold-process" }
scaffold-template = { path = "../scaffold-template" }
shlex = "2.0.1"
thiserror = "2.0.18"

[dev-dependencies]
scaffold-scheme = { path = "../scaffold-scheme" }
serde_json = "1.0.150"
tempfile = "3.27.0"
