[package]
name = "scaffold-mcp"
version = "0.0.1"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
miette = { version = "7.6.0", default-features = false, features = ["fancy-no-backtrace"] }
rmcp = { version = "1.7.0", default-features = false, features = ["macros", "server", "transport-io"] }
scaffold-analyzer = { path = "../scaffold-analyzer" }
scaffold-catalog = { path = "../scaffold-catalog" }
scaffold-context = { path = "../scaffold-context" }
scaffold-diagnostic = { path = "../scaffold-diagnostic" }
scaffold-docs = { path = "../scaffold-docs" }
scaffold-dsl = { path = "../scaffold-dsl" }
scaffold-fmt = { path = "../scaffold-fmt" }
scaffold-install = { path = "../scaffold-install" }
scaffold-platform = { path = "../scaffold-platform" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = ["io-std", "io-util", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
