[package]
name = "scaffold-platform"
version = "0.0.1"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
