[package]
name = "scaffold-wasm"
version = "0.0.1"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
scaffold-editor = { path = "../scaffold-editor" }
scaffold-docs = { path = "../scaffold-docs", default-features = false }
scaffold-fmt = { path = "../scaffold-fmt" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[dev-dependencies]
scaffold-docs = { path = "../scaffold-docs", features = ["reference"] }
